# slack_scraper

./: .env  Cargo.toml  README.md
slack_db/: .env  Cargo.toml
slack_db/migrations/2023-12-30-161507_create_users/: up.sql
slack_db/migrations/2023-12-30-164505_create_login_action/: down.sql  up.sql
slack_db/migrations/2023-12-30-164539_create_signup_action/: down.sql  up.sql
slack_db/src/: db.rs  models.rs  schema.rs
src/: main.rs
src/slack_wrapper/: mod.rs  slack_fetch_api.rs  slack_message_handlers.rs
